added dives to kdDocuments.html

--- a/kdDocument.html
+++ b/kdDocument.html
@@ -3,14 +3,29 @@
     <title>KD Documents - Source Code</title>
   </head>
   <body>
-    <h1 style="text-align: center">KD Documents</h1>
+    <header>
+      <h1 style="text-align: center">KD Documents</h1>
+    </header>
+    <div>
     <p>
       What you're seeing is the source of this web page. You can go through this
       and understand what all the tags are doing. Click on the tags to learn
       more about it
     </p>
+  </div>
+    <div style="display: flex; justify-content: space-between">
+      <aside style="width: 10%; margin: 1% 1%">
+        <h1>hi</h1>
+      </aside>
 
-    <pre>
+      <div
+        style="
+          width: 80%;
+          background-color: antiquewhite;
+          border: 2px solid rgb(153, 143, 143);
+        "
+      >
+        <pre style="white-space: pre-wrap; overflow-wrap: break-word">
     <code>
       &lt;<a href="html_tag.html">html</a>&gt;
 
@@ -29,5 +44,10 @@
       &lt;/<a href="html_tag.html">html</a>&gt;
     </code>
   </pre>
+      </div>
+      <aside style="width: 10%; margin: 1% 1%">
+        <h1>hi</h1>
+      </aside>
+    </div>
   </body>
 </html>
