--- a/kdDocument.html
+++ b/kdDocument.html
@@ -15,13 +15,13 @@
   </div>
     <div style="display: flex; justify-content: space-between">
       <aside style="width: 10%; margin: 1% 1%">
-        <h1>hi</h1>
+        <h1>HTML Tutorial</h1>
       </aside>
 
       <div
         style="
           width: 80%;
-          background-color: antiquewhite;
+          background-color: rgba(242, 223, 97, 0.826);
           border: 2px solid rgb(153, 143, 143);
         "
       >
@@ -39,7 +39,8 @@
 
           &lt;<a href="h1_tag.html">h1</a> style="text-align: center"&gt;KD Documents&lt;/<a href="h1_tag.html">h1</a>&gt;
 
-          &lt;p&gt; What you're seeing is the source of this web page. You can go through this and understand what all the tags are doing. Click on the tags to learn more about it &lt;/p&gt;
+          &lt;p&gt; What you're seeing is the source of this web page. You can go through this and understand what all the tags are doing. Click on the tags to learn more about it
+          &lt;/p&gt;
         &lt;/<a href="body_tag.html">body</a>&gt;<br>
       &lt;/<a href="html_tag.html">html</a>&gt;
     </code>
@@ -49,5 +50,7 @@
         <h1>hi</h1>
       </aside>
     </div>
+    <footer>
+    </footer>
   </body>
 </html>
