--- a/body_tag.html
+++ b/body_tag.html
@@ -1,98 +1,104 @@
 <html>
   <head>
     <title>Body</title>
+    <style>
+      code {
+        background: #272822;
+        color: #f8f8f2;
+        border-radius: 3px;
+        padding: 0.1% 0.2%;
+      }
+    </style>
   </head>
   <body>
     <h1 style="text-align: center; color: brown">KD Document</h1>
     <h3>&lt; body &gt;</h3>
     <p>
-      The<code> <b>&lt; body &gt;</b></code> tag in HTML defines the main
-      content of an HTML document, encompassing all visible content on a
-      webpage, including text, images, videos, and other multimedia elements1.
-      It acts as a container for all the visible elements, providing structure
-      and organization to the webpage's content13.
+      The <code>&lt; body &gt;</code> tag in HTML defines the main content of an
+      HTML document, encompassing all visible content on a webpage, including
+      text, images, videos, and other multimedia elements1. It acts as a
+      container for all the visible elements, providing structure and
+      organization to the webpage's content13.
     </p>
 
     <h4>Attributes</h4>
     <ol>
       <li>
-        <code><b>bgcolor</b></code>
+        <b>bgcolor</b>
         <p><span>Sets the background color of the page</span></p>
         <h5>Examples</h5>
         <ul type="disc">
           <li>
-            &lt; body bgcolor="lightblue" &gt;
-            <p>
-              <code>sets the background color of the entire HTML document</code>
-            </p>
+            <code>&lt; body bgcolor="lightblue" &gt;</code>
+            <p>sets the background color of the entire HTML document</p>
           </li>
+
           <li>
-            &lt; body bgcolor="#FFFF00" &gt;
+            <code>&lt; body bgcolor="#FFFF00" &gt;</code>
             <p>
-              <code
-                >sets the background color to yellow using a hexadecimal color
-                code.</code
-              >
+              sets the background color to yellow using a hexadecimal color
+              code.
             </p>
           </li>
         </ul>
       </li>
+
       <li>
-        <code><b>text</b></code>
+        <b>text</b>
         <p><span>Sets the color of the text on the webpage</span></p>
         <h5>Examples</h5>
         <ul type="disc">
           <li>
-            &lt; body text="#008000" &gt;
+            <code>&lt; body text="#008000" &gt;</code>
             <p>
-              <code>Sets the default text color for the entire document</code>
+              Sets the default text color for the entire document
             </p>
           </li>
         </ul>
       </li>
       <li>
-        <code><b>link</b></code>
+        <b>link</b>
         <p><span>Sets the color of unvisited links</span></p>
         <h5>Examples</h5>
         <ul type="disc">
           <li>
-            &lt; body link="color_name" &gt;
+            <code>&lt; body link="color_name" &gt;</code>
             <p>
-              <code>Sets the default text color for the entire document</code>
+              Sets the default text color for the entire document
             </p>
           </li>
         </ul>
       </li>
       <li>
-        <code><b>alink</b></code>
+        <b>alink</b>
         <p><span>Sets the color of active links</span></p>
         <h5>Examples</h5>
         <ul type="disc">
           <li>
-            &lt;body alink="green"&gt;
-            <p><span> specifies the color of an active link in a document</span></p>
+            <code>&lt;body alink="green"&gt;</code>
+            <p>
+              specifies the color of an active link in a document
+            </p>
           </li>
         </ul>
       </li>
       <li>
-        <code><b>vlink</b></code>
+        <b>vlink</b>
         <p><span>Sets the color of visited links</span></p>
         <h5>Examples</h5>
         <ul type="disc">
           <li>
-            &lt;body vlink="red"&gt;
+            <code>&lt;body vlink="red"&gt;</code>
             <p><span>sets the color of visited links to red</span></p>
           </li>
         </ul>
       </li>
       <li>
-        <code><b>background</b></code>
+        <b>background</b>
         <p><span>Specifies an image to use as the background</span></p>
         <h5>Examples</h5>
         <ul type="disc">
-          <li>
-            background-color
-          </li>
+          <li>background-color</li>
         </ul>
       </li>
     </ol>
